; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_InputThread_GetInputAttachments.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_decoder.c_InputThread_GetInputAttachments.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.decoder_owner = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i32*, i32***, i32)* }

@VLC_ENOOBJ = common dso_local global i32 0, align 4
@VLC_EGENERIC = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32***, i32*)* @InputThread_GetInputAttachments to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @InputThread_GetInputAttachments(i32* %0, i32*** %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32***, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.decoder_owner*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32*** %1, i32**** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call %struct.decoder_owner* @dec_get_owner(i32* %10)
  store %struct.decoder_owner* %11, %struct.decoder_owner** %8, align 8
  %12 = load %struct.decoder_owner*, %struct.decoder_owner** %8, align 8
  %13 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %12, i32 0, i32 1
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = icmp ne %struct.TYPE_2__* %14, null
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load %struct.decoder_owner*, %struct.decoder_owner** %8, align 8
  %18 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %17, i32 0, i32 1
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32 (i32*, i32***, i32)*, i32 (i32*, i32***, i32)** %20, align 8
  %22 = icmp ne i32 (i32*, i32***, i32)* %21, null
  br i1 %22, label %25, label %23

23:                                               ; preds = %16, %3
  %24 = load i32, i32* @VLC_ENOOBJ, align 4
  store i32 %24, i32* %4, align 4
  br label %45

25:                                               ; preds = %16
  %26 = load %struct.decoder_owner*, %struct.decoder_owner** %8, align 8
  %27 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %26, i32 0, i32 1
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32 (i32*, i32***, i32)*, i32 (i32*, i32***, i32)** %29, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = load i32***, i32**** %6, align 8
  %33 = load %struct.decoder_owner*, %struct.decoder_owner** %8, align 8
  %34 = getelementptr inbounds %struct.decoder_owner, %struct.decoder_owner* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = call i32 %30(i32* %31, i32*** %32, i32 %35)
  store i32 %36, i32* %9, align 4
  %37 = load i32, i32* %9, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %25
  %40 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %40, i32* %4, align 4
  br label %45

41:                                               ; preds = %25
  %42 = load i32, i32* %9, align 4
  %43 = load i32*, i32** %7, align 8
  store i32 %42, i32* %43, align 4
  %44 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %41, %39, %23
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local %struct.decoder_owner* @dec_get_owner(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
